<resources>
    <string name="app_name">Alarm</string>
    <string name="action_settings">Settings</string>
    <string name="description_delete_alarm">Delete Alarm</string>
    <string name="alarm_days_placeholder">Alarm Days</string>
    <string name="alarm_time_placeholder">00:00</string>
    <string name="title_activity_add_alarm">AddAlarmActivity</string>
    <string name="add_alarm_transition">addAlarm</string>
    <string name="description_alarm_label">Type a label for this alarm</string>
    <string name="description_alarm_time">Choose a time for this alarm</string>
    <string name="alarm_time_assist">Click time to change</string>
    <string name="label_assist">Type a label for this alarm</string>
    <string name="current_date_placeholder">January 28</string>
    <string name="current_time_placeholder">00:00</string>
    <string name="day_name_placeholder">Thursday</string>
    <string name="alarm_days_text">Mo Tu We Th Fr Sa Su</string>
    <string name="add_cancel_text">Cancel</string>
    <string name="add_confirm_text">Confirm</string>
    <string name="description_alarm_repeating">Choose days to repeat this alarm on</string>
    <string name="hint_alarm_label">Label</string>
    <string name="sunday_short">Su</string>
    <string name="monday_short">Mo</string>
    <string name="tuesday_short">Tu</string>
    <string name="wednesday_short">We</string>
    <string name="thursday_short">Th</string>
    <string name="friday_short">Fr</string>
    <string name="saturday_short">Sa</string>
    <string name="alarm_ampm_placeholder">am</string>
    <string name="title_activity_default_ringing">DefaultRingingActivity</string>
    <string name="card_transition_name">card_transition</string>
    <string name="card_time_transition_name">cardtime</string>
    <string name="card_ampm_transition_name">cardampm</string>
    <string name="card_days_transition_name">carddays</string>
</resources>
