<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/alarm_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/card_margin_bottom"
    android:layout_marginLeft="@dimen/card_margin_left"
    android:layout_marginStart="@dimen/card_margin_left"
    android:layout_marginRight="@dimen/card_margin_right"
    android:layout_marginEnd="@dimen/card_margin_right"
    android:layout_marginTop="@dimen/card_margin_top"
    android:transitionName="@string/card_transition_name">

   <!-- <RelativeLayout
        android:id="@+id/alarm_card_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:background="#FFFFFFFF"
        android:paddingBottom="@dimen/card_margin_bottom"
        android:paddingLeft="@dimen/card_margin_left"
        android:paddingRight="@dimen/card_margin_right"
        android:paddingTop="@dimen/card_margin_top"
        >

        <TextView
            android:id="@+id/alarm_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alarm_time_placeholder"
            android:textColor="@color/colorPrimaryText"
            android:textSize="40sp"
            android:layout_marginLeft="@dimen/leaf_margin_left"
            android:layout_marginStart="@dimen/leaf_margin_left"
            android:layout_marginRight="@dimen/leaf_margin_right"
            android:layout_marginEnd="@dimen/leaf_margin_right"
            android:layout_marginTop="@dimen/leaf_margin_top" />

        <TextView
            android:id="@+id/alarm_days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/alarm_days_placeholder"
            android:textColor="@color/colorSecondaryText"
            android:textSize="16sp"
            android:layout_marginBottom="@dimen/leaf_margin_bottom"
            android:layout_marginLeft="@dimen/leaf_margin_left"
            android:layout_marginStart="@dimen/leaf_margin_left"
            android:layout_marginRight="@dimen/leaf_margin_right"
            android:layout_marginEnd="@dimen/leaf_margin_right"
            android:drawableLeft="@drawable/ic_location_on_black_24dp"
            android:gravity="bottom"
            />
        <RelativeLayout
            android:id="@+id/alarm_card_buttons"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/alarm_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/leaf_margin_bottom"
                android:layout_marginLeft="@dimen/leaf_margin_left"
                android:layout_marginStart="@dimen/leaf_margin_left"
                android:layout_marginRight="@dimen/leaf_margin_right"
                android:layout_marginEnd="@dimen/leaf_margin_right"
                android:layout_marginTop="@dimen/leaf_margin_top"/>

            <ImageButton
                android:id="@+id/alarm_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@null"
                android:src="@drawable/ic_delete_black_24dp"
                android:layout_marginBottom="@dimen/leaf_margin_bottom"
                android:layout_marginLeft="@dimen/leaf_margin_left"
                android:layout_marginStart="@dimen/leaf_margin_left"
                android:layout_marginRight="@dimen/leaf_margin_right"
                android:layout_marginEnd="@dimen/leaf_margin_right"
                android:layout_marginTop="@dimen/leaf_margin_top"
                android:contentDescription="@string/description_delete_alarm"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>
    </RelativeLayout>-->
    <RelativeLayout
        android:id="@+id/alarm_card_layout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:paddingBottom="@dimen/card_margin_bottom"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingStart="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/card_margin_right"
        android:paddingEnd="@dimen/card_margin_right"
        android:paddingTop="@dimen/card_margin_top"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true">
        <RelativeLayout
            android:id="@+id/alarm_card_icon_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="start|center_vertical"
            android:minWidth="@dimen/icon_container_padding">
            <ImageView
                android:id="@+id/alarm_card_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/icon_padding"
                android:contentDescription="@string/description_alarm_time"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toRightOf="@id/alarm_card_icon_layout"
            android:layout_toEndOf="@id/alarm_card_icon_layout"
            android:layout_centerVertical="true">
            <TextView
                android:id="@+id/alarm_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/leaf_margin_right"
                android:text="@string/alarm_time_placeholder"
                android:textColor="@color/colorPrimaryText"
                android:fontFamily="sans-serif-light"
                android:textSize="40sp"
                android:transitionName="@string/card_time_transition_name"/>
            <TextView
                android:id="@+id/alarm_ampm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/alarm_time"
                android:layout_toEndOf="@id/alarm_time"
                android:layout_alignBaseline="@id/alarm_time"
                android:text="@string/alarm_ampm_placeholder"
                android:textColor="@color/colorPrimaryText"
                android:fontFamily="sans-serif-light"
                android:textSize="15sp"
                android:transitionName="@string/card_ampm_transition_name"
                />
            <TextView
                android:id="@+id/alarm_days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/alarm_time"
                android:text="@string/alarm_days_text"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/secondary_text_size"
                android:transitionName="@string/card_days_transition_name"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/alarm_card_buttons"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/alarm_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginBottom="@dimen/leaf_margin_bottom"
                android:layout_marginLeft="@dimen/leaf_margin_left"
                android:layout_marginStart="@dimen/leaf_margin_left"
                android:layout_marginRight="@dimen/leaf_margin_right"
                android:layout_marginEnd="@dimen/leaf_margin_right"
                android:layout_marginTop="@dimen/leaf_margin_top"/>
        </RelativeLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>
