<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.AddAlarmActivity"
    tools:showIn="@layout/activity_add_alarm">

    <RelativeLayout
        android:id="@+id/time_picker_layout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:paddingBottom="@dimen/card_margin_bottom"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingStart="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/card_margin_right"
        android:paddingEnd="@dimen/card_margin_right"
        android:paddingTop="@dimen/card_margin_top">
        <RelativeLayout
            android:id="@+id/time_picker_icon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="start|center_vertical"
            android:minWidth="@dimen/icon_container_padding">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/icon_padding"
                android:src="@drawable/ic_alarm_black_24dp"
                android:contentDescription="@string/description_alarm_time"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toRightOf="@id/time_picker_icon"
            android:layout_toEndOf="@id/time_picker_icon"
            android:layout_centerVertical="true">
        <TextView
            android:id="@+id/time_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alarm_time_placeholder"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/primary_text_size"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/time_picker_assist"
            android:text="@string/alarm_time_assist"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/secondary_text_size" />
        </LinearLayout>
    </RelativeLayout>

    <View
        android:id="@+id/time_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/time_picker_layout"
        android:background="@color/colorDivider" />

    <RelativeLayout
        android:id="@+id/name_layout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@id/time_divider"
        android:paddingBottom="@dimen/card_margin_bottom"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingStart="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/card_margin_right"
        android:paddingEnd="@dimen/card_margin_right"
        android:paddingTop="@dimen/card_margin_top">

        <RelativeLayout
            android:id="@+id/name_icon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="start|center_vertical"
            android:minWidth="@dimen/icon_container_padding">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/icon_padding"
                android:src="@drawable/ic_label_black_24dp"
                android:contentDescription="@string/description_alarm_label"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toRightOf="@id/name_icon"
            android:layout_toEndOf="@id/name_icon"
            android:layout_centerVertical="true">
            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alarm_time_placeholder"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/primary_text_size"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/label_assist"
                android:text="@string/label_assist"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/secondary_text_size" />
        </LinearLayout>
    </RelativeLayout>

    <View
        android:id="@+id/name_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/name_layout"
        android:background="@color/colorDivider" />

</RelativeLayout>
